# Fireball

./: .gitignore  CMakeLists.txt  README.md
data/kernels/: particleSystem.cl
data/shaders/: ptFragment.glsl  ptVertex.glsl
program/: CMakeLists.txt  clparticle.cpp
src/: camera.cpp  camera.h  clfactory.cpp  clfactory.h  common.h  const.h  debug.h  glfactory.cpp  glfactory.h  matrix.h  matrix.ih  particlesystem.cpp  particlesystem.h  renderer.cpp  renderer.h  singleton.h  vector.h  vector.ih
